# qdrant-dbsaas-assessment

./: .gitignore  README.md
charts/: README.md
components/: logging.yaml
components/draftsman/: README.md
components/gatekeeper/: pyproject.toml
components/gatekeeper/src/gatekeeper/: service_startup.py
components/gatekeeper/src/gatekeeper/application/: settings.py
components/gatekeeper/src/gatekeeper/application/services/: routing.py
components/gatekeeper/src/gatekeeper/domain/: ports.py
components/gatekeeper/src/gatekeeper/domain/services/: api_key.py
components/gatekeeper/src/gatekeeper/domain/value_objects/: request.py
components/gatekeeper/src/gatekeeper/infrastructure/repositories/: memory.py
components/gatekeeper/src/gatekeeper/infrastructure/reverse_proxy/: twisted.py
components/nebula/: pyproject.toml
components/nebula/src/nebula/: service_startup.py
components/nebula/src/nebula/application/: settings.py
components/nebula/src/nebula/application/services/: kube_config.py
components/nebula/src/nebula/domain/: ports.py
components/nebula/src/nebula/domain/entities/: db_cluster_specs.py
components/nebula/src/nebula/domain/services/: api_keys.py  kubernetes.py
components/nebula/src/nebula/infrastructure/: consumer.py
components/nebula/src/nebula/infrastructure/clients/: helm.py
components/nebula/src/nebula/infrastructure/templates/: qdrant_values.j2
components/nexus/: README.md  pyproject.toml
components/nexus/src/nexus/command_bus/application/: command_bus.py
components/nexus/src/nexus/command_bus/domain/: ports.py
components/nexus/src/nexus/command_bus/domain/commands/v1/db_clusters/: models.py  provision.py
components/nexus/src/nexus/command_bus/infrastructure/: implementations.py
components/nexus/src/nexus/core/application/: logging.py
components/nexus/src/nexus/core/domain/: README.md  command.py  message.py  msg_type.py  ports.py
components/nexus/src/nexus/core/domain/aggregate_roots/: resource_map.py
components/nexus/src/nexus/core/domain/entities/: cloud_provider.py  db_cluster.py
components/nexus/src/nexus/core/domain/value_objects/: compute_resources.py
components/nexus/src/nexus/core/infrastructure/model/: implementations.py
components/nexus/src/nexus/core/infrastructure/model/pydantic/: pydantic_model.py
components/nexus/src/nexus/core/infrastructure/repositories/: db_cluster.py
components/orion/: .gitignore  pyproject.toml
components/orion/src/orion/: service_startup.py
components/orion/src/orion/application/: settings.py
components/orion/src/orion/application/config/: uvicorn.py
components/orion/src/orion/application/services/: resources.py
components/orion/src/orion/application/services/auth/: api_key.py  (+1 more)
components/orion/src/orion/domain/: exceptions.py  ports.py
components/orion/src/orion/domain/entities/: resource_allocation.py
components/orion/src/orion/domain/value_objects/: resource_claim.py
components/orion/src/orion/infrastructure/fast_api/: api_routes.py  service.py
devops/composes/: db-saas-dev-stack.yaml
devops/container_files/: cf-qdrant-db-saas
devops/scripts/: start_service.sh
docs/: .buildinfo  architecture.html  gen_docs.sh  genindex.html  index.html  networking.html  objects.inv  scope.html  search.html
docs/_sources/: scope.rst.txt
docs/html/doctrees/: architecture.doctree  environment.pickle  index.doctree  networking.doctree
docs/html/html/: searchindex.js  use_cases.html
docs/html/html/_sources/: networking.rst.txt
docs/source/: architecture.rst  index.rst  use_cases.rst
docs/source/resources/uml/: building_blocks.puml
docs/source/resources/uml/use_cases/: use_case_new_db_cluster.puml
docs_gen/html/doctrees/: scope.doctree  use_cases.doctree
docs_gen/source/: conf.py
docs_gen/source/resources/: networking
docs_gen/source/resources/uml/: architecture_overview.puml  component_interactions.puml
docs_gen/source/resources/uml/use_cases/: use_case_gate_keeper_connection.puml  use_case_new_api_key.puml
persistence_layer/: README.md
persistence_layer/command_bus_dead_letter/: 688c14fe-9b83-5887-ba6c-f4fa310adc63.yaml
persistence_layer/db_clusters/: 12a607bb-1751-4a85-83c9-3f1911cef4e7.yaml
persistence_layer/kube_configs/12a607bb-1751-4a85-83c9-3f1911cef4e7/: ca.crt  client.crt  client.key  config
persistence_layer/resource_maps/: local.yaml
(+12 files in other folders)
