[tool.poetry]
name = "GateKeeper"
version = "1.0.0"
description = """\
Proxy Authenticator \
"""
authors = ["Albert Monfa <albert.monfa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.0"
nexus = { path = "../nexus/", develop = false }
Twisted = "24.3.0"
cryptography = "42.0.8"


[tool.poetry.dev-dependencies]
python = "^3.11.0"
black = "23.3.0"
flake8 = "6.1.0"
bandit = "1.7.5"
ruff = "^0.1.6"
pytest = "8.1.1"
Faker = "24.4.0"
pytest-asyncio = "0.23.6"
pytest-cov = "5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = false
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "B"]
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = ["B"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=orion_engine",
    "--cov=orion_api",
    "--cov=orion_shared",
    "--cov-report=term",
]
testpaths = [
    "test",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 70

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

allowed-confusables = ["−", "ρ", "∗"]


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"